:arrow_up: 1.0.10 :tada:

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "output"
   ],
   "license": "MIT",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -31,6 +31,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
